[package]
name = "pushboard"
version = "0.1.0"
edition = "2024"

[dependencies]
push2 = { git = "https://github.com/saltchicken/push2", features = [
  "waveform",
] }
env_logger = "0.11.8"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
pipewire = "0.9.2"
hound = "3.5.1"
image = "0.25.8"
imageproc = "0.25.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
embedded-graphics = "0.8.0"
kira = "0.11.0"
